# etl-python-excel

./: main.py  output.html  pyproject.toml
src/: validador.py
